<resources>
    <string name="app_name">A+物流</string>

    <!--DefaultProgressDialog-->
    <string name="text_progress_logining">登录中&#8230;</string>
    <string name="text_progress_loading">加载中&#8230;</string>
    <string name="text_progress_committing">提交中&#8230;</string>
    <string name="text_progress_requesting">请求中&#8230;</string>
    <string name="text_progress_uploading">上传中&#8230;</string>
    <string name="text_progress_checking_update">正在检查更新&#8230;</string>

    <!--RongIM-->
    <string name="toast_rongim_token_error">融云token不正确，请重新登录</string>
    <string name="toast_connect_rongim_success">连接融云成功</string>
    <string name="toast_connect_rongim_error">连接融云失败，请关闭后重新打开</string>

    <!--Toast-->
    <string name="toast_no_more_data">没有更多数据</string>

    <!--MainActivity-->
    <string name="tab_order_text">周边订单</string>
    <string name="tab_contacts_text">通讯列表</string>
    <string name="tab_mine_message_text">我的消息</string>
    <string name="toast_exit">再按一次退出系统</string>

    <!--LoginActivty-->
    <string name="title_login_activity">登录</string>
    <string name="text_to_register">注册</string>
    <string name="text_phone_number_hint">手机号</string>
    <string name="text_password_hint">密码</string>
    <string name="text_do_login">登录</string>
    <string name="text_forget_password">忘记密码？</string>
    <string name="toast_login_success">登录成功</string>
    <string name="toast_login_error">登录失败</string>

    <!--VerificationCodeActivity-->
    <string name="title_register">注册</string>
    <string name="title_find_password">找回密码</string>
    <string name="text_to_login">登录</string>
    <string name="text_hint_phone_number">请填写手机号</string>
    <string name="text_button_get_verification_code">获取验证码</string>
    <string name="text_button_count_down">%d秒后重发</string>
    <string name="text_button_reget_verification_code">重发验证码</string>
    <string name="text_hint_verification_code">请填写验证码</string>
    <string name="text_button_next_step">下一步</string>
    <string name="toast_phone_number_error">请输入正确的手机号码</string>
    <string name="toast_get_verification_code_success">验证码已发送</string>

    <!--SetPasswordActivity-->
    <string name="title_reset_password">设置新密码</string>
    <string name="title_set_password">填写密码</string>
    <string name="text_hint_password">请填写密码</string>
    <string name="text_button_do_commit">完成</string>
    <string name="toast_passowrd_is_null">密码不能为空</string>
    <string name="toast_set_password_success">设置密码成功</string>
    <string name="toast_change_password_success">修改密码成功</string>
    <string name="toast_register_success">注册成功</string>

    <!--ChatActivity-->

    <!--OrderFragment-->
    <string name="title_order">周边订单</string>
    <string name="text_tips_my_order">我的订单</string>
    <string name="text_tips_receive_order">已接收订单</string>
    <string name="text_tips_more_my_order">更多</string>
    <string name="text_item_order_number">订单号:%1$s</string>
    <string name="text_tips_around_order">周边订单</string>
    <string name="text_tips_near_courier">附近快递员</string>
    <string name="text_tab_order_type">类型</string>
    <string name="text_tab_order_status">状态</string>
    <string name="text_tab_courier_company">快递公司</string>

    <!--ContactsFragment-->
    <string name="title_contacts">通讯列表</string>
    <string name="text_tab_chat">聊天</string>
    <string name="text_tab_friends">好友</string>

    <!--MineFragment-->
    <string name="text_button_bind">手机已绑定</string>
    <string name="text_button_qrcode">二维码名片</string>
    <string name="text_button_my_ordre">我的订单</string>
    <string name="text_button_my_message">个人消息</string>
    <string name="text_button_my_draft_box">草稿箱</string>
    <string name="text_button_my_wallet">我的零钱</string>
    <string name="text_button_manage_address">管理地址</string>
    <string name="text_button_register_courier">注册为快递员</string>
    <string name="text_button_courier_order">快递订单</string>
    <string name="text_button_customer_service">联系客服</string>
    <string name="text_user_id">ID:%s</string>

    <!--UserSettingsActivity-->
    <string name="title_user_settings_activity">设置</string>
    <string name="text_edit_user_information">修改个人资料</string>
    <string name="text_change_password">修改密码</string>
    <string name="text_change_bind_phone">修改绑定手机</string>
    <string name="text_check_update">系统更新</string>
    <string name="text_current_version">当前版本V%s</string>
    <string name="text_clean_cache">清除缓存</string>
    <string name="text_button_login_out">退出登录</string>
    <string name="text_dialog_message">是否退出登录？</string>
    <string name="text_dialog_button_do_login_out">退出登录</string>
    <string name="text_dialog_button_cancel">取消</string>
    <string name="toast_clean_cache_finish">已清除缓存</string>
    <string name="toast_is_last_version">已经是最新版</string>
    <string name="toast_get_version_error">获取版本失败</string>

    <!--EditUserInfoActivity-->
    <string name="title_edit_user_information">修改个人资料</string>
    <string name="text_edit_user_avatar">头像</string>
    <string name="text_edit_user_nickname">昵称</string>
    <string name="text_edit_user_id">ID</string>
    <string name="text_edit_user_sign">个人签名</string>
    <string name="text_button_edit_save">保存</string>
    <string name="text_list_dialog_show_avatar">查看头像大图</string>
    <string name="text_list_dialog_take_photo">拍照换头像</string>
    <string name="text_list_dialog_select_photo">从相册选择新头像</string>
    <string name="text_list_dialog_cancel">取消</string>
    <string name="toast_upate_user_information_success">修改成功</string>
    <string name="toast_file_is_not_exists">文件不存在</string>

    <!--ShowImageActivity-->
    <string name="title_show_image">查看大图</string>

    <!--EditInformationActivity-->
    <string name="title_edit_user_nickname">修改昵称</string>
    <string name="title_edit_user_sign">修改个人签名</string>
    <string name="text_hint_user_nickname">请填写昵称</string>
    <string name="text_hint_user_sign">请填写个人签名</string>
    <string name="text_button_save_information">保存</string>
    <string name="toast_content_is_null">填写的内容不能为空</string>

    <!--ChangePasswordActivity-->
    <string name="title_change_password">修改密码</string>
    <string name="text_tips_input_phone_code">请输入%s收到的验证码</string>
    <string name="text_hint_change_password_input_code">请填写验证码</string>
    <string name="text_cp_button_get_verification_code">获取验证码</string>
    <string name="text_cp_button_count_down">%d秒后重发</string>
    <string name="text_button_change_password_next_step">下一步</string>
    <string name="toast_not_bind_phone">没有绑定手机号码</string>

    <!--ReleaseOrderActivity-->
    <string name="title_release_order">发布订单</string>
    <string name="save_draft_dialog_title">是否保存到草稿箱</string>
    <string name="save_draft_dialog_positive_button">保存</string>
    <string name="save_draft_dialog_negative_button">不保存</string>
    <string name="title_release_order_basic_information">基本信息</string>
    <string name="title_edit_sender_address">请输入寄件人详细地址</string>
    <string name="title_edit_receiver_address">请输入收件人详细地址</string>
    <string name="title_goods_details_choose">货物信息（可选）</string>
    <string name="title_goods_details_choose_express_company">快递公司</string>
    <string name="title_goods_details_choose_good_style">货物类型</string>
    <string name="title_goods_details_choose_good_size">货物大小</string>
    <string name="title_goods_details_choose_good_weight">货物重量</string>
    <string name="title_goods_details_choose_remark">添加备注</string>
    <string name="title_issuance_way">发布方式</string>
    <string name="title_issuance_way_now">即时发布</string>
    <string name="title_issuance_way_book">预约发布</string>
    <string name="title_issuance_way_reward">悬赏发布</string>
    <string name="title_send_to_courier">发送给快递员</string>

    <!--ManageAddressActivity-->
    <string name="title_default_address">默认地址</string>
    <string name="title_set_default_address">设为默认地址</string>
    <string name="title_manage_address_edit">编辑</string>
    <string name="title_manage_address_delete">删除</string>

    <!--EditAddressActivity-->
    <string name="title_add_address">添加地址</string>
    <string name="title_edit_address">编辑地址</string>
    <string name="title_edit_address_name">联系人</string>
    <string name="hint_title_edit_address_name">请输入姓名</string>
    <string name="title_edit_address_mobile">联系电话</string>
    <string name="hint_title_edit_address_mobile">请输入手机号码</string>
    <string name="title_edit_address_address">所在区域</string>
    <string name="hint_title_edit_address_address">请选择省市区</string>
    <string name="title_edit_address_detail">详细地址</string>
    <string name="hint_title_edit_address_detail">请输入详细地址</string>
    <string name="title_edit_address_save">保存</string>
    <string name="title_choose_address">添加地址</string>
    <string name="title_location_now">定位当前位置</string>
    <string name="title_open_location">无法定位当前位置，请打开定位服务</string>

</resources>
