<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/include_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_edit_address_name"
            android:textSize="14sp"
            android:textColor="@color/color_181818"/>

        <EditText
            android:id="@+id/et_edit_address_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="right|center_vertical"
            android:hint="@string/hint_title_edit_address_name"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/color_666666"
            android:textCursorDrawable="@null"
            android:textSize="14sp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/color_E3E3E3"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_edit_address_mobile"
            android:textSize="14sp"
            android:textColor="@color/color_181818"/>

        <EditText
            android:id="@+id/et_edit_address_mobile"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="15dp"
            android:background="@null"
            android:gravity="right|center_vertical"
            android:textCursorDrawable="@null"
            android:inputType="phone"
            android:hint="@string/hint_title_edit_address_mobile"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="14sp"
            android:textColor="@color/color_666666"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/color_E3E3E3"/>

    <LinearLayout
        android:id="@+id/ll_edit_address_address"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_edit_address_address"
            android:textSize="14sp"
            android:textColor="@color/color_181818"/>

        <TextView
            android:id="@+id/tv_edit_address_address"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:gravity="right|center_vertical"
            android:hint="@string/hint_title_edit_address_address"
            android:maxLines="2"
            android:textSize="14sp"
            android:textColor="@color/color_666666"/>

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/list_right"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/color_E3E3E3"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_edit_address_detail"
            android:textSize="14sp"
            android:textColor="@color/color_181818"/>

        <EditText
            android:id="@+id/et_edit_address_detail"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="15dp"
            android:background="@null"
            android:gravity="right|center_vertical"
            android:textCursorDrawable="@null"
            android:hint="@string/hint_title_edit_address_detail"
            android:maxLines="2"
            android:textSize="14sp"
            android:textColor="@color/color_666666"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/color_E3E3E3"/>

    <LinearLayout
        android:id="@+id/ll_edit_address_set_default"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/title_set_default_address"
            android:textSize="14sp"
            android:textColor="@color/color_181818"/>
        
        <ImageView
            android:id="@+id/iv_edit_address_set_default"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/ic_radio_nomal"/>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_E3E3E3">

        <TextView
            android:id="@+id/tv_edit_address_save"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="16dp"
            android:background="@drawable/selector_bg_button_yellow"
            android:gravity="center"
            android:enabled="false"
            android:text="@string/title_edit_address_save"
            android:textColor="@drawable/selector_text_button_yellow"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>
