<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/include_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/shape_bg_edittext">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:padding="15dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_iphone" />

            <EditText
                android:id="@+id/et_phone_number"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/text_hint_phone_number"
                android:inputType="phone"
                android:maxLength="15"
                android:maxLines="1"
                android:textColor="@color/color_181818"
                android:textColorHint="@color/color_999999"
                android:textSize="@dimen/textsize_14" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/color_D1D1D1" />

            <TextView
                android:id="@+id/tv_get_code"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/text_button_get_verification_code"
                android:textColor="@color/color_181818"
                android:textSize="@dimen/textsize_14" />

        </LinearLayout>

        <EditText
            android:id="@+id/et_verification_code"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/shape_bg_edittext"
            android:hint="@string/text_hint_verification_code"
            android:inputType="numberSigned"
            android:maxLength="15"
            android:maxLines="1"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:textColor="@color/color_181818"
            android:textColorHint="@color/color_999999"
            android:textSize="@dimen/textsize_14" />

        <TextView
            android:id="@+id/tv_next_step"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/shape_bg_button_gray"
            android:gravity="center"
            android:text="@string/text_button_next_step"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize_16" />

    </LinearLayout>

</LinearLayout>
