<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_EEEEEE"
    android:orientation="vertical">

    <include layout="@layout/include_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_edit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/selector_bg_button_transparent"
            android:paddingEnd="16dp"
            android:paddingStart="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/text_edit_user_information"
                android:textColor="@color/color_181818"
                android:textSize="@dimen/textsize_14" />

            <ImageView
                android:layout_width="8dp"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                android:src="@drawable/list_right" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:background="@color/color_EEEEEE" />

        <LinearLayout
            android:id="@+id/ll_change_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/selector_bg_button_transparent"
            android:paddingEnd="16dp"
            android:paddingStart="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/text_change_password"
                android:textColor="@color/color_181818"
                android:textSize="@dimen/textsize_14" />

            <ImageView
                android:layout_width="8dp"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                android:src="@drawable/list_right" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:background="@color/color_EEEEEE" />

        <LinearLayout
            android:id="@+id/ll_change_phone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/selector_bg_button_transparent"
            android:paddingEnd="16dp"
            android:paddingStart="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/text_change_bind_phone"
                android:textColor="@color/color_181818"
                android:textSize="@dimen/textsize_14" />

            <ImageView
                android:layout_width="8dp"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                android:src="@drawable/list_right" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_check_update"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/selector_bg_button_transparent"
            android:paddingEnd="16dp"
            android:paddingStart="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/text_check_update"
                android:textColor="@color/color_181818"
                android:textSize="@dimen/textsize_14" />

            <TextView
                android:id="@+id/tv_version"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/color_666666"
                android:textSize="@dimen/textsize_14"
                tools:text="当前版本V1.0.0" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:background="@color/color_EEEEEE" />

        <LinearLayout
            android:id="@+id/ll_clean_cache"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/selector_bg_button_transparent"
            android:paddingEnd="16dp"
            android:paddingStart="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/text_clean_cache"
                android:textColor="@color/color_181818"
                android:textSize="@dimen/textsize_14" />

            <TextView
                android:id="@+id/tv_cache"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/color_666666"
                android:textSize="@dimen/textsize_14"
                tools:text="1024GB" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_login_out"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:background="@drawable/selector_bg_button_yellow"
        android:gravity="center"
        android:text="@string/text_button_login_out"
        android:textColor="@color/color_181818"
        android:textSize="16sp" />

</LinearLayout>
