<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/include_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/shape_bg_edittext">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:padding="15dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_iphone" />

            <EditText
                android:id="@+id/et_phone_number"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/text_phone_number_hint"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLength="15"
                android:maxLines="1"
                android:textColor="@color/color_181818"
                android:textColorHint="@color/color_999999"
                android:textSize="@dimen/textsize_14" />

            <ImageView
                android:id="@+id/iv_clear_phone"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:padding="14dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_clear"
                android:visibility="gone"
                tools:visibility="visible" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/shape_bg_edittext">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:padding="15dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_password" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/text_password_hint"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="15"
                android:maxLines="1"
                android:textColor="@color/color_181818"
                android:textColorHint="@color/color_999999"
                android:textSize="@dimen/textsize_14" />

            <ImageView
                android:id="@+id/iv_clear_password"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:padding="14dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_clear"
                android:visibility="gone"
                tools:visibility="visible" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_do_login"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/selector_bg_button_yellow"
            android:gravity="center"
            android:text="@string/text_do_login"
            android:textColor="@drawable/selector_text_button_yellow"
            android:textSize="@dimen/textsize_16" />

        <TextView
            android:id="@+id/tv_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_gravity="end"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/text_forget_password"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/textsize_12" />

    </LinearLayout>

</LinearLayout>
