<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/include_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_tips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/textsize_14"
            tools:text="请输入138****0000收到的验证码" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_bg_edittext">

            <EditText
                android:id="@+id/et_code"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/text_hint_change_password_input_code"
                android:inputType="phone"
                android:maxLength="11"
                android:maxLines="1"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:textColor="@color/color_181818"
                android:textColorHint="@color/color_999999"
                android:textSize="@dimen/textsize_14" />

            <ImageView
                android:id="@+id/iv_clear_code"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:padding="14dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_clear"
                android:visibility="gone"
                tools:visibility="visible" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/color_D1D1D1" />

            <TextView
                android:id="@+id/tv_get_code"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:background="@drawable/selector_bg_button_transparent"
                android:gravity="center"
                android:text="@string/text_cp_button_get_verification_code"
                android:textColor="@drawable/selector_text_button_black"
                android:textSize="@dimen/textsize_14" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_next_step"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/selector_bg_button_yellow"
            android:gravity="center"
            android:text="@string/text_button_change_password_next_step"
            android:textColor="@drawable/selector_text_button_yellow"
            android:textSize="@dimen/textsize_16" />

    </LinearLayout>

</LinearLayout>
